feat: Update getByVisitaId method to filter and map checklists based on associated descriptions